--- a/vpc/vpc_metrics.yaml
+++ b/vpc/vpc_metrics.yaml
@@ -1,9 +1,9 @@
 namespaces:
-  compute.googleapis.com/quota:
-    namespace: compute.googleapis.com/quota
+  compute.googleapis.com:
+    namespace: compute.googleapis.com
     metrics:
-      "cloud_router_prefixes_from_other_regions_per_region_per_vpc_network/usage":
-        name: "cloud_router_prefixes_from_other_regions_per_region_per_vpc_network/usage"
+      "quota/cloud_router_prefixes_from_other_regions_per_region_per_vpc_network/usage":
+        name: "quota/cloud_router_prefixes_from_other_regions_per_region_per_vpc_network/usage"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: ""
@@ -13,8 +13,8 @@ namespaces:
         dataDelay: 150
         description: "The number of cloud router prefixes originating from other regions
           that are attached to VPC networks in a given region."
-      "dynamic_routes_per_region_per_peering_group/usage":
-        name: "dynamic_routes_per_region_per_peering_group/usage"
+      "quota/dynamic_routes_per_region_per_peering_group/usage":
+        name: "quota/dynamic_routes_per_region_per_peering_group/usage"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: ""
@@ -24,8 +24,8 @@ namespaces:
         dataDelay: 150
         description: "Measures the number of dynamic routes in each region and peering
           group combination within a Google Cloud VPC Network."
-      "instances_per_vpc_network/exceeded":
-        name: "instances_per_vpc_network/exceeded"
+      "quota/instances_per_vpc_network/exceeded":
+        name: "quota/instances_per_vpc_network/exceeded"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: "{data}/60"
@@ -35,8 +35,8 @@ namespaces:
         dataDelay: 150
         description: "Number of unsuccessful attempts to create a Compute Engine instance
           beyond the network quota limit."
-      "instances_per_vpc_network/usage":
-        name: "instances_per_vpc_network/usage"
+      "quota/instances_per_vpc_network/usage":
+        name: "quota/instances_per_vpc_network/usage"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: ""
@@ -45,8 +45,8 @@ namespaces:
         samplingRate:
         dataDelay: 150
         description: "Measures the current number of instances in a VPC network."
-      "internal_lb_forwarding_rules_per_vpc_network/exceeded":
-        name: "internal_lb_forwarding_rules_per_vpc_network/exceeded"
+      "quota/internal_lb_forwarding_rules_per_vpc_network/exceeded":
+        name: "quota/internal_lb_forwarding_rules_per_vpc_network/exceeded"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: "{data}/60"
@@ -56,8 +56,8 @@ namespaces:
         dataDelay: 150
         description: "The number of attempts to create more than the allowed limit
           of internal load balancing forwarding rules per VPC network."
-      "internal_lb_forwarding_rules_per_vpc_network/usage":
-        name: "internal_lb_forwarding_rules_per_vpc_network/usage"
+      "quota/internal_lb_forwarding_rules_per_vpc_network/usage":
+        name: "quota/internal_lb_forwarding_rules_per_vpc_network/usage"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: ""
@@ -67,8 +67,8 @@ namespaces:
         dataDelay: 150
         description: "The number of Internal Load Balancing forwarding rules in each
           VPC network."
-      "internal_managed_forwarding_rules_per_vpc_network/exceeded":
-        name: "internal_managed_forwarding_rules_per_vpc_network/exceeded"
+      "quota/internal_managed_forwarding_rules_per_vpc_network/exceeded":
+        name: "quota/internal_managed_forwarding_rules_per_vpc_network/exceeded"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: "{data}/60"
@@ -78,8 +78,8 @@ namespaces:
         dataDelay: 150
         description: "The number of failed attempts to create or update internal managed
           forwarding rules per VPC network within Compute Engine."
-      "internal_managed_forwarding_rules_per_vpc_network/usage":
-        name: "internal_managed_forwarding_rules_per_vpc_network/usage"
+      "quota/internal_managed_forwarding_rules_per_vpc_network/usage":
+        name: "quota/internal_managed_forwarding_rules_per_vpc_network/usage"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: ""
@@ -89,8 +89,8 @@ namespaces:
         dataDelay: 150
         description: "Measures the number of internal managed forwarding rules per
           VPC network in a Google Cloud Platform project."
-      "internal_protocol_forwarding_rules_per_vpc_network/usage":
-        name: "internal_protocol_forwarding_rules_per_vpc_network/usage"
+      "quota/internal_protocol_forwarding_rules_per_vpc_network/usage":
+        name: "quota/internal_protocol_forwarding_rules_per_vpc_network/usage"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: ""
@@ -100,8 +100,8 @@ namespaces:
         dataDelay: 150
         description: "Measures the number of internal protocol forwarding rules per
           VPC network."
-      "ip_aliases_per_vpc_network/exceeded":
-        name: "ip_aliases_per_vpc_network/exceeded"
+      "quota/ip_aliases_per_vpc_network/exceeded":
+        name: "quota/ip_aliases_per_vpc_network/exceeded"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: "{data}/60"
@@ -111,8 +111,8 @@ namespaces:
         dataDelay: 150
         description: "The number of attempts to create more IP aliases than the limit
           set by a VPC network."
-      "ip_aliases_per_vpc_network/usage":
-        name: "ip_aliases_per_vpc_network/usage"
+      "quota/ip_aliases_per_vpc_network/usage":
+        name: "quota/ip_aliases_per_vpc_network/usage"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: ""
@@ -122,8 +122,8 @@ namespaces:
         dataDelay: 150
         description: "The number of IP aliases per VPC network in Google Cloud Platform
           Compute Engine."
-      "peerings_per_vpc_network/exceeded":
-        name: "peerings_per_vpc_network/exceeded"
+      "quota/peerings_per_vpc_network/exceeded":
+        name: "quota/peerings_per_vpc_network/exceeded"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: "{data}/60"
@@ -133,8 +133,8 @@ namespaces:
         dataDelay: 150
         description: "The number of attempts to exceed the peering limit per VPC network
           in Compute Engine."
-      "peerings_per_vpc_network/usage":
-        name: "peerings_per_vpc_network/usage"
+      "quota/peerings_per_vpc_network/usage":
+        name: "quota/peerings_per_vpc_network/usage"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: ""
@@ -144,8 +144,8 @@ namespaces:
         dataDelay: 150
         description: "Measures the number of peerings per VPC network in Google Cloud
           Platform's computing environment."
-      "psc_google_apis_forwarding_rules_per_vpc_network/exceeded":
-        name: "psc_google_apis_forwarding_rules_per_vpc_network/exceeded"
+      "quota/psc_google_apis_forwarding_rules_per_vpc_network/exceeded":
+        name: "quota/psc_google_apis_forwarding_rules_per_vpc_network/exceeded"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: "{data}/60"
@@ -155,8 +155,8 @@ namespaces:
         dataDelay: 150
         description: "The number of attempts to exceed the quota limit for Google-managed
           forwarding rules per VPC network."
-      "psc_google_apis_forwarding_rules_per_vpc_network/usage":
-        name: "psc_google_apis_forwarding_rules_per_vpc_network/usage"
+      "quota/psc_google_apis_forwarding_rules_per_vpc_network/usage":
+        name: "quota/psc_google_apis_forwarding_rules_per_vpc_network/usage"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: ""
@@ -165,8 +165,8 @@ namespaces:
         samplingRate:
         dataDelay: 150
         description: "The number of Google-managed forwarding rules in each VPC network."
-      "psc_ilb_consumer_forwarding_rules_per_producer_vpc_network/usage":
-        name: "psc_ilb_consumer_forwarding_rules_per_producer_vpc_network/usage"
+      "quota/psc_ilb_consumer_forwarding_rules_per_producer_vpc_network/usage":
+        name: "quota/psc_ilb_consumer_forwarding_rules_per_producer_vpc_network/usage"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: ""
@@ -176,8 +176,8 @@ namespaces:
         dataDelay: 150
         description: "The number of producer-to-VPC network forwarding rules on Internet
           Load Balancers (ILBs) per VPC network."
-      "static_routes_per_vpc_network/usage":
-        name: "static_routes_per_vpc_network/usage"
+      "quota/static_routes_per_vpc_network/usage":
+        name: "quota/static_routes_per_vpc_network/usage"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: ""
@@ -186,8 +186,8 @@ namespaces:
         samplingRate:
         dataDelay: 150
         description: "The number of static routes in a VPC network."
-      "subnet_ranges_per_vpc_network/exceeded":
-        name: "subnet_ranges_per_vpc_network/exceeded"
+      "quota/subnet_ranges_per_vpc_network/exceeded":
+        name: "quota/subnet_ranges_per_vpc_network/exceeded"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: "{data}/60"
@@ -197,8 +197,8 @@ namespaces:
         dataDelay: 150
         description: "The number of attempts to exceed the limit for subnet ranges
           per VPC network in Compute Engine."
-      "subnet_ranges_per_vpc_network/usage":
-        name: "subnet_ranges_per_vpc_network/usage"
+      "quota/subnet_ranges_per_vpc_network/usage":
+        name: "quota/subnet_ranges_per_vpc_network/usage"
         type: compute.googleapis.com/VpcNetwork
         unit: "Count"
         dataConvertor: ""
