--- a/gke/gke_identified_output_yaml_files/k8s_container.yaml
+++ b/gke/gke_identified_output_yaml_files/k8s_container.yaml
@@ -6,6 +6,7 @@ namespaces:
         name: "cpu/core_usage_time"
         type: k8s_container
         unit: "Second of CPU time"
+        dataConvertor: ""
         datatype: DOUBLE
         regionFetcher: location
         samplingRate: 60
@@ -15,6 +16,7 @@ namespaces:
         name: "cpu/limit_utilization"
         type: k8s_container
         unit: "Count"
+        dataConvertor: ""
         datatype: DOUBLE
         regionFetcher: location
         samplingRate: 60
@@ -26,6 +28,7 @@ namespaces:
         name: "cpu/request_cores"
         type: k8s_container
         unit: "Number of CPUs"
+        dataConvertor: ""
         datatype: DOUBLE
         regionFetcher: location
         samplingRate: 60
@@ -35,6 +38,7 @@ namespaces:
         name: "cpu/request_utilization"
         type: k8s_container
         unit: "Count"
+        dataConvertor: ""
         datatype: DOUBLE
         regionFetcher: location
         samplingRate: 60
@@ -45,6 +49,7 @@ namespaces:
         name: "memory/limit_utilization"
         type: k8s_container
         unit: "Count"
+        dataConvertor: ""
         datatype: DOUBLE
         regionFetcher: location
         samplingRate: 60
@@ -54,6 +59,7 @@ namespaces:
         name: "memory/used_bytes"
         type: k8s_container
         unit: "Bytes"
+        dataConvertor: ""
         datatype: INT64
         regionFetcher: location
         samplingRate: 60
@@ -63,6 +69,7 @@ namespaces:
         name: "restart_count"
         type: k8s_container
         unit: "Count"
+        dataConvertor: ""
         datatype: INT64
         regionFetcher: location
         samplingRate: 60
