--- a/loadbalancer/loadbalancer_identified_output_yaml_files/https_lb_rule.yaml
+++ b/loadbalancer/loadbalancer_identified_output_yaml_files/https_lb_rule.yaml
@@ -1,11 +1,12 @@
 namespaces:
-  loadbalancing.googleapis.com:
-    namespace: loadbalancing.googleapis.com
+  loadbalancing.googleapis.com/https:
+    namespace: loadbalancing.googleapis.com/https
     metrics:
-      "https/backend_latencies":
-        name: "https/backend_latencies"
+      "backend_latencies":
+        name: "backend_latencies"
         type: https_lb_rule
         unit: "Milliseconds"
+        dataConvertor: "{data}/60"
         datatype: DISTRIBUTION
         regionFetcher: region
         samplingRate: 60
@@ -15,19 +16,21 @@ namespaces:
           Extensions, it measures the accumulated latency between each ProcessingRequest/ProcessingResponse
           pair between the load balancer and the extension backend. Sampled every
           60 seconds."
-      "https/backend_request_bytes_count":
-        name: "https/backend_request_bytes_count"
+      "backend_request_bytes_count":
+        name: "backend_request_bytes_count"
         type: https_lb_rule
         unit: "Bytes"
+        dataConvertor: "{data}/60"
         datatype: INT64
         regionFetcher: region
         samplingRate: 60
         dataDelay: 210
         description: "Number of bytes sent by external HTTP(S) load balancer to backends."
-      "https/backend_request_count":
-        name: "https/backend_request_count"
+      "backend_request_count":
+        name: "backend_request_count"
         type: https_lb_rule
         unit: "Count"
+        dataConvertor: "{data}/60"
         datatype: INT64
         regionFetcher: region
         samplingRate: 60
@@ -35,10 +38,11 @@ namespaces:
         description: "The total count of HTTP(S) requests served by a Google Cloud
           external HTTP(S) load balancer, or gRPC streams between the load balancer
           and a Service Extension backend."
-      "https/backend_response_bytes_count":
-        name: "https/backend_response_bytes_count"
+      "backend_response_bytes_count":
+        name: "backend_response_bytes_count"
         type: https_lb_rule
         unit: "Bytes"
+        dataConvertor: "{data}/60"
         datatype: INT64
         regionFetcher: region
         samplingRate: 60
@@ -47,29 +51,32 @@ namespaces:
           the backends (or cache) to the external HTTP(S) load balancer. For Service
           Extensions, it represents the total number of bytes received by the load
           balancer from the extension backend."
-      "https/frontend_tcp_rtt":
-        name: "https/frontend_tcp_rtt"
+      "frontend_tcp_rtt":
+        name: "frontend_tcp_rtt"
         type: https_lb_rule
         unit: "Milliseconds"
+        dataConvertor: "{data}/60"
         datatype: DISTRIBUTION
         regionFetcher: region
         samplingRate: 60
         dataDelay: 210
         description: "The histogram of round-trip times (RTT) for connections between
           clients and proxies."
-      "https/request_count":
-        name: "https/request_count"
+      "request_count":
+        name: "request_count"
         type: https_lb_rule
         unit: "Count"
+        dataConvertor: "{data}/60"
         datatype: INT64
         regionFetcher: region
         samplingRate: 60
         dataDelay: 210
         description: "External HTTP(S) load balancer requests count."
-      "https/total_latencies":
-        name: "https/total_latencies"
+      "total_latencies":
+        name: "total_latencies"
         type: https_lb_rule
         unit: "Milliseconds"
+        dataConvertor: "{data}/60"
         datatype: DISTRIBUTION
         regionFetcher: region
         samplingRate: 60
